# bloqCat

./: .gitattributes  Dockerfile  README.md  pyproject.toml  readthedocs.yml  requirements.txt
.github/workflows/: Read-the-docs.yml  docker-image.yml  lint_format.yml
bloqcat/: __init__.py
bloqcat/api/v1_api/: bloqcat.py  root.py
docs/: index.rst
docs/architecture_documentation/: system_design.rst
docs/contribution_guidelines_documentation/: contributing.rst
docs/project_introduction/: overview.rst
docs/resources/: references.rst
docs/tutorials/: first_steps.rst
