[tool.poetry]
name = "bloqcat"
version = "0.4.1"
description = "A REST API for aggregation of qc-pattern concrete solutions"
authors = ["Daniel Georg"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0.0"
flask = { extras = ["dotenv"], version = "^3.1.0" }
Flask-JWT-Extended = "^4.7.1"
Flask-Cors = "^5.0.1"
Flask-SQLAlchemy = "^3.0.3"
SQLAlchemy = "^2.0.4"
Flask-Migrate = "^4.0.4"
flask-babel = "^4.0.0"
flask-smorest = "^0.45.0"
tomli = "^2.0.0"
docutils = "^0.21.2"
numpy = "^2.2.5"
pandas = "^2.2.3"
platformdirs = "^4.3.7"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.2"
tzdata = "^2025.2"

[tool.poetry.group.dev.dependencies]
# use key "tool.poetry.dev-dependencies" if you have to support poetry < 1.2!
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^7.2.0"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^24.12.12"
Sphinx = ">=6,<8"
sphinxcontrib-redoc = "^1.6.0"
sphinx-click = "^6.0.0"
myst-parser = "^4.0.1"
invoke = "^2.0.0"
pip-licenses = "^5.0.0"

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
target-version = ["py38"]
line-length = 90
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
reverse_relative = true
group_by_package = true
honor_noqa = true
atomic = true

[tool.sphinx]
copyright-year = 2023
# theme = "sphinx_rtd_theme"  # theme must be added to the requirements first!
enable-autodoc = true
enable-autosectionlabel = true
# documentation for myst: <https://myst-parser.readthedocs.io/en/latest>
enable-markdown = "myst"
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = true
# update gitignore if you want to edit docs/readme.md manually!
include-readme = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]

[tool.sphinx.myst]
# settings documentation: <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
# create anchors for h1 and h2
heading_anchors = 2
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
# substitutions = {"key": "substitution value"}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
